fix: make gallery responsive on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -304,27 +304,8 @@ nav a:hover {
 
 /* gallery home page */
 
-.main-gallery {
-  background-image: url("../images/gallery-images/hero-image.jpg");
-  background-color: #14213d;
-  background-blend-mode: multiply;
-  background-size: cover;
-  width: 100%;
-  /* height: 800px; */
-}
-
-.main-gallery h2 {
-  color: white;
-  font-family: 'Lato', sans-serif;
-  font-weight: 900;
-  margin-inline: 20px;
-  padding: 30px 0;
-}
-
-
-
 .home-gallery {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   padding: 0;
   display: flex;
   flex-wrap: wrap;
@@ -349,13 +330,13 @@ nav a:hover {
 }
 
 @media (max-aspect-ratio: 1/1) {
-  li {
+  .home-gallery li {
     height: 30vh;
   }
 }
 
 @media (max-height: 480px) {
-  li {
+  .home-gallery li {
     height: 80vh;
   }
 }
@@ -365,7 +346,7 @@ nav a:hover {
     flex-direction: row;
   }
 
-  li {
+  .home-gallery li {
     height: auto;
     width: 100%;
   }
